ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: trips-ingress
  namespace: ingress-basic
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
  - http:
      paths:
      - backend:
          serviceName: trips
          servicePort: 80
        path: /trips(/|$)(.*)
      - backend:
          serviceName: poi
          servicePort: 80
        path: /poi(/|$)(.*)
      - backend:
          serviceName: tripviewer
          servicePort: 80
        path: /tripviewer(/|$)(.*)
      - backend:
          serviceName: userprofile
          servicePort: 80
        path: /userprofile(/|$)(.*)
      - backend:
          serviceName: user-java
          servicePort: 80
        path: /user-java(/|$)(.*)  
---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: trips-ingress-static
  namespace: ingress-basic
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/rewrite-target: /static/$2
spec:
  rules:
  - http:
      paths:
      - backend:
          serviceName: aks-helloworld-one
          servicePort: 80
        path: /static(/|$)(.*
